<resources>
    <string name="app_name">PantryPro</string>
    <string name="inventory_label">Inventory</string>

    <!-- Top bar navigation -->
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!-- List of items in list -->
    <string name="detail">Detail ></string>
    <string name="SampleText">Sample Text</string>
    <string name="name">Name:</string>
    <string name="cost">Cost:</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="tags">Tags:</string>

    <!--Button labels-->
    <string name="backButton">Back</string>

    <!-- Bottom row navigation buttons -->
    <string name="lists">Lists</string>
    <string name="recipes">Recipes</string>
    <string name="meal_Plan">Meal Plan</string>
    <string name="grocery">Grocery</string>

    <!-- Miscellaneous -->
    <string name="addGroceryList">Add to Grocery List</string>
    <string name="recipeTags">Recipe Tags</string>
    <string name="ingredientDetails">Ingredient Details</string>
    <string name="ingredient">Ingredient:</string>
    <string name="quantity">Quantity:</string>
    <string name="assignRecipe">Assign Recipe Activity</string>
    <string name="groceryList">Grocery List</string>
    <string name="directions">Directions:</string>
    <string name="notes">Notes:</string>
    <string name="listofingredients">List of Ingredients</string>
    <string name="addingredient">Add Ingredient</string>
    <string name="deleteingredient">Delete Ingredient</string>
    <string name="measurement">Measurement:</string>
    <string name="modify">Modify</string>
    <string name="describehowtodeleteItem">Select ingredient to delete</string>
</resources>
